including the menu

--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@
 }
 
 .setac-primary-button {
-  @apply bg-primary text-white cursor-pointer rounded-full px-2 w-fit py-[10px] text-[12px] font-seatac font-medium uppercase leading-[22px] justify-center items-center md:px-10;
+  @apply bg-primary text-white cursor-pointer rounded-full px-4 w-fit py-[8px] text-[12px] font-seatac font-medium uppercase leading-[22px] justify-center items-center md:px-10 md:py-[10px];
 }
 
 .seatac-card {
